# rheo

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE-MIT  MIGRATION.md  README.md  TYPST_API_RESEARCH.md  commands.md  flake.nix  install.sh  readme.org  style.csl  test_parser_ranges
.beads/: issues.jsonl
.github/workflows/: ci.yml  pre-release.yml  release.yml
.github/workflows/setup/: action.yml
chapters/: 0.introduction.typ
docs/: new-releases.md  next.md  old-CLAUDE.md
examples/: barkek_chapter2.clauded.typ  bartek_chapter2.typ  information-wants-to-be-free.typ  proof-by-contradiction.typ  severance-ep-1.typ  severance-ep-3.typ
examples/academic_book/: antinomies.typ  readme.org  references.bib
examples/academic_cv/: cv.typ  readme.org
examples/academic_cv/lib/: template.typ
examples/blog_post/: portable_epubs.typ  writing-in-typst.typ
examples/blog_site/: README.md  index.typ  readme.org  rheo.toml  severance-ep-1.typ  severance-ep-2.typ  severance-ep-3.typ
examples/blog_site/content/: index.typ  severance-ep-1.typ  severance-ep-2.typ  severance-ep-3.typ
examples/custom_structure/: readme.md  rheo.toml
examples/custom_structure/content/: index.typ
examples/custom_structure/content/lib/: utils.typ
examples/custom_structure/content/posts/: feature-overview.typ
examples/custom_structure/data/: config.json
examples/custom_structure/static/css/: style.css
examples/interactive_blog/: portable_epubs.typ  readme.org
examples/job_application/: cover-letter.typ  rheo.toml
examples/job_materials/: Kermode_CV_2025.typ  Kermode_CoverLetter_2025.typ  Kermode_ResearchStatement_2025.typ  Kermode_TeachingStatement_2025.typ  index.typ  references.bib  rheo.toml
examples/job_materials/lib/: aspirationally.typ  humanistically.typ
examples/phd_thesis/: information-wants-to-be-free.typ  proof-by-contradiction.typ  readme.org  references.bib
examples/portable_epubs/: portable_epubs.typ  readme.org
examples/research_statement/: Kermode_ResearchStatement_2025.typ  readme.org  references.bib  style.csl
examples/scripts/polish_translate/: bartek_chapter2.typ
examples/web_book/: 0.introduction.typ  readme.org
scripts/polish_translate/: polish.txt  polish.typ  readme.org
src/css/: style.css
src/rs/: assets.rs  cli.rs  compile.rs  config.rs  config.rs.orig  config.rs.rej  constants.rs  epub.rs  error.rs  init.rs  lib.rs  logging.rs  main.rs  manifest_version.rs  output.rs  path_utils.rs  project.rs  results.rs  server.rs  spine.rs  validation.rs  watch.rs  world.rs
src/rs/epub/: package.rs  xhtml.rs
src/rs/formats/: common.rs  compiler.rs  epub.rs  html.rs  mod.rs  pdf.rs
src/rs/formats/epub/: mod.rs  package.rs  xhtml.rs
src/rs/formats/html/: mod.rs
src/rs/formats/postprocess/: dom.rs  html_head.rs  links.rs  mod.rs
src/rs/links/: mod.rs  parser.rs  serializer.rs  spine.rs  transformer.rs  types.rs  validator.rs
src/rs/postprocess/: dom.rs  html_head.rs  links.rs  mod.rs
src/rs/reticulate/: parser.rs  serializer.rs  spine.rs  transformer.rs  validator.rs
src/templates/init/: rheo.toml
src/typ/: rheo.typ
src/typst/: rheo.typ
tests/: README.md  harness.rs  integration.rs  integration_test.rs  test_harness.rs
tests/cases/code_blocks_with_links/: rheo.toml
tests/cases/cross_directory_links/: rheo.toml
tests/cases/epub_explicit_config/: chapter.typ  intro.typ  rheo.toml
tests/cases/epub_explicit_spine/: rheo.toml
tests/cases/error_formatting/: rheo.toml  type_error.typ  undefined_var.typ
tests/cases/html_spine/: rheo.toml
tests/cases/link_path_edge_cases/: rheo.toml
tests/cases/link_transformation/: rheo.toml
tests/cases/links_with_fragments/: rheo.toml
tests/cases/multi_file_epub_default/: chapter1.typ  chapter2.typ  conclusion.typ  intro.typ  rheo.toml
tests/cases/pdf_individual/: rheo.toml
tests/cases/pdf_merge/: chapter1.typ  chapter2.typ  intro.typ  rheo.toml
tests/cases/pdf_merge_error_duplicate/: rheo.toml
tests/cases/pdf_merge_error_duplicate/dir1/: chapter.typ
tests/cases/pdf_merge_error_duplicate/dir2/: chapter.typ
tests/cases/pdf_merge_error_nonspine/: chapter1.typ  intro.typ  rheo.toml
tests/cases/pdf_merge_false/: rheo.toml
tests/cases/pdf_spine_merge_false/: rheo.toml
tests/cases/relative_path_links/: rheo.toml
tests/cases/single_file_epub_default/: test.typ
tests/cases/target_function/: main.typ  rheo.toml
tests/cases/target_function_in_module/: main.typ  rheo.toml
tests/cases/target_function_in_module/lib/: format_helper.typ
tests/cases/target_function_in_package/: main.typ  rheo.toml
tests/helpers/: comparison.rs  discovery.rs  fixtures.rs  markers.rs  mod.rs  reference.rs  test_store.rs
tests/inputs/simple/: simple.typ
tests/ref/blog_site/html/: index.html  severance-ep-2.html
tests/ref/blog_site/pdf/: severance-ep-1.metadata.json  severance-ep-2.metadata.json  severance-ep-3.metadata.json
tests/ref/cases/epub_explicit_config/epub/: epub_explicit_config.metadata.json
tests/ref/cases/epub_explicit_config/html/: chapter.html  intro.html
tests/ref/cases/epub_explicit_config/pdf/: chapter.metadata.json  intro.metadata.json
tests/ref/cases/multi_file_epub_default/html/: chapter1.html  chapter2.html  conclusion.html  intro.html
tests/ref/cases/multi_file_epub_default/pdf/: chapter1.metadata.json  chapter2.metadata.json  conclusion.metadata.json  intro.metadata.json
tests/ref/cases/pdf_merge/html/: chapter1.html  chapter2.html  conclusion.html  intro.html  style.metadata.json
tests/ref/cases/pdf_merge/pdf/: pdf_merge.metadata.json
tests/ref/examples/academic_book/html/: antinomies.html
tests/ref/examples/academic_book/pdf/: antinomies.metadata.json
(+141 files in other folders)
