[package]
name = "rheo"
version = "0.1.0"
edition = "2021"
authors = ["rheo contributors"]
description = "A tool for flowing Typst documents into publishable outputs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/rheo"

[[bin]]
name = "rheo"
path = "src/rs/main.rs"

[lib]
name = "rheo"
path = "src/rs/lib.rs"

[dependencies]
typst = { git = "https://github.com/typst/typst", branch = "main" }
typst-library = { git = "https://github.com/typst/typst", branch = "main" }
typst-pdf = { git = "https://github.com/typst/typst", branch = "main" }
typst-html = { git = "https://github.com/typst/typst", branch = "main" }
typst-kit = { git = "https://github.com/typst/typst", branch = "main", default-features = false, features = ["fonts", "embed-fonts", "packages", "vendor-openssl"] }
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
thiserror = "1.0"
parking_lot = "0.12"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
atty = "0.2"
pathdiff = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
globset = "0.4"
notify = "6.1"
tokio = { version = "1", features = ["rt", "sync", "time", "signal", "rt-multi-thread", "macros"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
webbrowser = "1.0"
mime_guess = "2.0"
tokio-stream = { version = "0.1", features = ["sync"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
