[package]
name = "rheo"
version = "0.1.0"
edition = "2024"
authors = ["Lachlan Kermode <lachie@ohrg.org>"]
description = "A tool for flowing typst into html, epub, and pdf simultaneously"
license = "MIT OR Apache-2.0"
repository = "https://github.com/breezykermo/rheo"
exclude = [
  "docs/",
  "tests/",
  "examples/",
  ".github/",
  ".beads/",
  ".claude/",
  "flake.nix",
  "flake.lock",
  ".envrc",
  "CLAUDE.md",
  "Justfile",
  "header.png"
]

[[bin]]
name = "rheo"
path = "src/rs/main.rs"

[lib]
name = "rheo"
path = "src/rs/lib.rs"

[dependencies]
typst = "0.14.2"
typst-library = "0.14.2"
typst-pdf = "0.14.2"
typst-html = "0.14.2"
typst-kit = "0.14.2"
comemo = "0.5"
ecow = "0.2"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
thiserror = "1.0"
opener = "0.7"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
atty = "0.2"
pathdiff = "0.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
globset = "0.4"
glob = "0.3"
notify = "6.1"
tokio = { version = "1", features = ["rt", "sync", "time", "signal", "rt-multi-thread", "macros"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
webbrowser = "1.0"
mime_guess = "2.0"
tokio-stream = { version = "0.1", features = ["sync"] }
regex = "1.10"
serde-xml-rs = "0.8.2"
zip = { version = "6.0.0", default-features = false }
html5ever = "0.36.1"
markup5ever_rcdom = "0.36.0"
anyhow = "1.0.100"
iref = { version = "3.2.2", features = ["serde"] }
itertools = "0.14.0"
uuid = { version = "1.18.1", features = ["v4"] }
tempfile = "3.8"

[dev-dependencies]
serde_json = "1.0"
similar = "2.5"
glob = "0.3"
lopdf = "0.34"
ntest = "0.9.3"
sha2 = "0.10"
typst-syntax = { git = "https://github.com/typst/typst", branch = "main" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.local-dev]
inherits = "dev"

# Makes Typst run quickly without impacting incremental compile times
[profile.local-dev.package."*"]
opt-level = 3
